# Stratosphere

./: README.md
Engine/: CMakeLists.txt
Engine/include/ECS/: ArchetypeStore.h  Components.h  Prefab.h
Engine/include/Engine/: Camera.h  FilesUtils.h  GroundPlaneRenderPassModule.h  Pipeline.h  RendererMinimal.h  SModelRenderPassModule.h  VulkanContext.h  Window.h
Engine/include/Structs/: QueueFamilyStruct.h  SpawnGroup.h
Engine/include/assets/: MeshFormats.h  ModelAsset.h  ModelFormat.h  SModelLoader.h
Engine/include/assets/model/: SModelHeader.h  SModelNodeRecord.h
Engine/include/utils/: BufferUtils.h  ImageUtils.h
Engine/shaders/: smodel.vert  smodel.vert.spv
Engine/src/: AssetManager.cpp  BufferUtils.cpp  GLFWWindow.cpp  GroundPlaneRenderPassModule.cpp  ImageUtils.cpp  Pipeline.cpp  RendererMinimal.cpp  SMeshLoader.cpp  SModelLoader.cpp  SModelRenderPassModule.cpp  VulkanContext.cpp  camera.cpp
Engine/tools/: CMakeLists.txt
Engine/tools/GltfToSmodel/: GltfToSmodel.cpp
Engine/tools/ObjToSmesh/: CMakeLists.txt  ObjToSmesh.cpp  tiny_obj_loader.h
Sample/: CMakeLists.txt  MySampleApp.h  ScenarioSpawner.h  Scinerio.json  update.h
Sample/entities/: HeavyInfantry.json  LightInfantry.json
Sample/src/: MySampleApp.cpp  ScenarioSpawner.cpp  VerifyLoadSModel.cpp  main.cpp  update.cpp
Sample/systems/: RenderSystem.h  SteeringSystem.h
